archive section tidy

--- a/src/App.css
+++ b/src/App.css
@@ -381,27 +381,33 @@ p {
 }
 
 .link-box {
-  width: 48px;
-  height: 48px;
+  width: 4.8rem;
+  height: 4.8rem;
   display: flex;
   align-items:center ;
   justify-content: center;
-  border-radius: 9px;
+  border-radius: 1.4rem;
 
   border: 1px solid var(--border-gray);
-  background:var(--nav-color);
+  /* background:var(--nav-color); */
+  background: var(--nav-color);
   font-size: 14px;
   /* box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1), 0px 3px 1px rgba(0, 0, 0, 0.04); */
   transition: all 300ms ease-in-out;
 }
 
 .link-box:hover {
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1), 0px 3px 1px rgba(0, 0, 0, 0.02);
-  /* background: var(--nav-highlight); */
+  background: var(--nav-highlight);
+
 }
 
 .link-box svg path {
   fill: var(--nav-icon-higlight) !important;
+
+}
+
+.link-box svg {
+  width: 18px;
 }
 
 .title-wrapper {
@@ -443,7 +449,7 @@ p {
   left: 0px;
     -webkit-mask-image:linear-gradient(180deg, #404040 0%, rgba(64, 64, 64, 0.00)100%);
     mask-image: linear-gradient(180deg, #404040 0%, rgba(64, 64, 64, 0.00)100%);
-    opacity: 0.2;
+    opacity: 0.15;
     z-index: -1;
 }
 
@@ -473,7 +479,7 @@ p {
   left: 0px;
     -webkit-mask-image:linear-gradient(180deg, #404040 0%, rgba(64, 64, 64, 0.00)100%);
     mask-image: linear-gradient(180deg, #404040 0%, rgba(64, 64, 64, 0.00)100%);
-    opacity: 0.5;
+    opacity: 0.15;
     z-index: -1;
 }
 
@@ -503,7 +509,7 @@ background-image: url(/public/assets/various/dot.png);
   left: 0px;
     -webkit-mask-image:linear-gradient(180deg, #404040 0%, rgba(64, 64, 64, 0.00)100%);
     mask-image: linear-gradient(180deg, #404040 0%, rgba(64, 64, 64, 0.00)100%);
-    opacity: 0.5;
+    opacity: 0.1;
     z-index: -1;
 }
 
@@ -522,7 +528,7 @@ background-image: url(/public/assets/various/dot.png);
 
   text-decoration: none;
   color: white;
-  border-radius: 16px;
+  border-radius: 1.6rem;
   /* overflow: hidden; */
   background-image: linear-gradient(180deg, var(--nav-color) 0%, var(--black-white-0) 100%);
   position: relative;
@@ -629,18 +635,33 @@ background-image: url(/public/assets/various/dot.png);
 
 .project-detail-grid img {
   border-radius: 16px;
+  width: 100%;
+  height: 60dvh;
+  object-fit: cover;
   border: 1px solid var(--border-gray);
 }
 
 .link-button {
   background-color: var(--nav-color);
   border: 1px solid var(--border-gray);
-  padding: 8px 24px;
+
   border-radius: 2.4rem;
   color: var(--text-color);
   cursor:pointer;
   transition: all 300ms ease-in-out;
   font-size: 1.4rem;
+  display: flex;
+  gap: 8px;
+  padding: 0 10px;
+  height: 32px;
+  align-items: center;
+  justify-content: center;
+}
+
+.link-button span {
+  font-size: 14px;
+
+
 }
 
 .link-button:hover {
@@ -670,30 +691,29 @@ background-image: url(/public/assets/various/dot.png);
 
 .archive-card img {
   width: 100%;
-  height: auto;
+  height: 80%;
 }
 
 .archive-card video {
   width: 100%;
-  height: 100%;
+  height: 80%;
   object-fit: cover;
   align-items: center;
-  padding-bottom: 18px;
+
 }
 
 .archive-info {
   padding: 1.4rem;
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
+  justify-content: space-between;
   background-color: var(--nav-color);
   backdrop-filter:blur(2px);
-  position: absolute;
   color: var(--text-color);
   font-size: 24px;
-  bottom: -2px;
-  left: -2px;
-  z-index: 8;
-  width: 100.4%;
+  height: 20%;
+
+
   border-top: 1px solid var(--border-gray) ;
   /* border-radius: 0 0 18px 18px; */
 }
@@ -777,15 +797,17 @@ background-image: url(/public/assets/various/dot.png);
   top: 8%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  padding: 0.8rem 1rem;
+  justify-content: center;
+  width: 8rem;
+  height: 32px;
   gap: 4px;
+  padding: 0 8px;
   border-radius: 16px;
   font-size: 1.4rem;
   /* background-color: var(--nav-color); */
   border: 1px solid var(--border-gray);
   border-radius: 2.4rem;
-  max-width: 5.6rem;
+  max-width:  8rem;
 }
 
 
@@ -912,8 +934,8 @@ background-image: url(/public/assets/various/dot.png);
   }
 
   .link-box {
-    width: 36px;
-    height: 36px;
+    width: 4.2rem;
+    height: 4.2rem;
   }
 
   .link-box svg {
@@ -1036,7 +1058,7 @@ background-image: url(/public/assets/various/dot.png);
 
   .top-grid-projects {
 
-    aspect-ratio:8/5;
+    aspect-ratio:8/2;
   }
 
   /* .top-blob-archive {
