--- a/src/App.css
+++ b/src/App.css
@@ -636,7 +636,7 @@ background-image: url(/public/assets/various/dot.png);
 .project-detail-grid img {
   border-radius: 16px;
   width: 100%;
-  height: 60dvh;
+  height: 60vh;
   object-fit: cover;
   border: 1px solid var(--border-gray);
 }
