--- a/src/App.css
+++ b/src/App.css
@@ -816,7 +816,7 @@ background-image: url(/public/assets/various/dot.png);
 
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(10, 200px);
+  grid-template-rows: repeat(7, 200px);
   gap: 1rem;
 
 }
@@ -824,12 +824,25 @@ background-image: url(/public/assets/various/dot.png);
 .bento-card {
   border-radius: 1.4rem;
   background-color: var(--nav-color);
-  padding: 1.6rem;
+  padding: 1.8rem;
 }
 
 .intro-box {
   grid-area: 1 / 1 / 3 / 4;
 
+}
+
+.intro-box h3 {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.intro-box p {
+  font-size: 2.4rem;
+  line-height:3.6rem ;
+  color: var(--text-color-2);
+  margin-bottom: 1rem;
 }
 
 .profile-img-box {
@@ -846,7 +859,51 @@ background-image: url(/public/assets/various/dot.png);
 
 .map-box {
   grid-area: 3/4/4/6;
+
+  background-image: url(../public//assets/various/map.jpg);
+  background-position:bottom right;
+  background-size: cover;
+
+  position: relative;
 }
+
+.map-marking {
+  width: 24px;
+  height: 24px;
+  background-color: #0e8bf1;
+  border-radius: 50%;
+  border: 4px solid white;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  position: absolute;
+  z-index: 5;
+}
+
+
+@keyframes pulse-scale {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(4);
+  }
+}
+
+.map-marking::before{
+  content: '';
+  width: 18px;
+  height: 18px;
+  background-color: #0e8bf146;
+  border-radius: 50%;
+  position: absolute;
+  top:0px ;
+  left: 0px;
+  z-index: 1;
+  animation: pulse-scale 1.5s ease-in-out infinite  ;
+}
+
+
 
 
 .linkdin-box {
@@ -869,21 +926,10 @@ background-image: url(/public/assets/various/dot.png);
   grid-area: 6/1/6/4;
 }
 
-.more-about-box {
+.thankyou-boy{
   grid-area: 7/1/9/6 ;
 }
 
-.hobby-box {
-  grid-area: 9/3/10/6
-}
-
-.bucket-box {
-  grid-area: 9/1/10/3;
-}
-
-.thankyou-boy {
-  grid-area: 10/2/11/5 ;
-}
 .footer-box {
   height: 150px;
   position: relative;
