--- a/src/App.css
+++ b/src/App.css
@@ -670,8 +670,8 @@ background-image: url(/public/assets/various/dot.png);
 }
 
 .navigation-buttons {
-  
-  
+
+
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -682,7 +682,7 @@ background-image: url(/public/assets/various/dot.png);
 .navigation-buttons p{
   font-size: 1.4rem;
   color: var(--text-color-05);
-  
+
 }
 
 .navigation-buttons h5 {
@@ -859,20 +859,23 @@ background-image: url(/public/assets/various/dot.png);
 
 .intro-box {
   grid-area: 1 / 1 / 3 / 4;
-
+  padding-top: 2.4rem;
+  background: transparent;
 }
 
 .intro-box h3 {
   margin-bottom: 16px;
-  font-weight: 500;
+  font-weight: 600;
   font-style: italic;
+  margin-bottom: 2rem;
 }
 
 .intro-box p {
-  font-size: 2.4rem;
-  line-height:3.6rem ;
+  font-size: 2.1rem;
+  font-weight: 400;
+  line-height:4rem ;
   color: var(--text-color-2);
-  margin-bottom: 1rem;
+  margin-bottom: 1.8rem;
 }
 
 .profile-img-box {
@@ -938,10 +941,60 @@ background-image: url(/public/assets/various/dot.png);
 
 .linkdin-box {
   grid-area: 4/5/5/6;
+  background-image: linear-gradient(135deg, #4facfe,#0083fe);
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
 }
+
+.linkdin-box svg path {
+  fill: var(--nav-icon-higlight) !important;
+}
+
+.linkdin-box svg {
+  transform: scale(3.2);
+  position: absolute;
+  bottom: 12%;
+  right: 12%;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+  transition: all 0.3s cubic-bezier(0.40,0,0.15,1);
+}
+
+.linkdin-box:hover.linkdin-box svg {
+  transform: scale(4) rotate(-8deg);
+  bottom: 15%;
+  right: 15%;
+}
+
 
 .x-box {
   grid-area: 4/4/5/5;
+  background-image: linear-gradient(135deg, #383838,#1f1f1f);
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.x-box svg path {
+  fill: var(--bg-color) !important;
+}
+
+.x-box svg {
+  background: var(--nav-icon-higlight);
+  border-radius: 1px;
+  transform: scale(4);
+  position: absolute;
+  bottom: 12%;
+  right: 12%;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(39, 36, 36, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+  padding: 2px;
+  transition: all 0.3s cubic-bezier(0.40,0,0.15,1);
+}
+
+.x-box:hover.x-box svg  {
+  transform: scale(5) rotate(-8deg);
+  bottom: 15%;
+  right: 15%;
 }
 
 .tech-stack-box {
