--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 :root {
   --white : rgba(255,255,255,1);
-
+  --black : rgb(10, 10, 10);
   --border-gray: rgb(40, 40, 40);
   --gray:#161414;
   --light-gray:rgb(221, 221, 221) ;
@@ -628,7 +628,9 @@ background-image: url(/public/assets/various/dot.png);
 
 .project-detail-grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  max-width: 1199px;
+  margin: 0 auto;
+  grid-template-columns: repeat(1fr);
   gap: 8px;
   font-size: 14px;
 }
@@ -636,7 +638,7 @@ background-image: url(/public/assets/various/dot.png);
 .project-detail-grid img {
   border-radius: 16px;
   width: 100%;
-  height: 64vh;
+  height: auto;
   object-fit: cover;
   border: 1px solid var(--border-gray);
 }
@@ -948,7 +950,7 @@ background-image: url(/public/assets/various/dot.png);
 }
 
 .linkdin-box svg path {
-  fill: var(--nav-icon-higlight) !important;
+  fill: var(--white);
 }
 
 .linkdin-box svg {
@@ -976,11 +978,11 @@ background-image: url(/public/assets/various/dot.png);
 }
 
 .x-box svg path {
-  fill: var(--bg-color) !important;
+  fill: var(--black) !important;
 }
 
 .x-box svg {
-  background: var(--nav-icon-higlight);
+  background: var(--white);
   border-radius: 1px;
   transform: scale(4);
   position: absolute;
@@ -1054,6 +1056,9 @@ background-image: url(/public/assets/various/dot.png);
     height: 60rem;
   }
 
+  .project-detail-grid {
+    grid-template-columns: 1fr;
+  }
 
 
   .archive-wrapper {
@@ -1090,6 +1095,11 @@ background-image: url(/public/assets/various/dot.png);
   .archive-wrapper {
     grid-template-columns: repeat(2,1fr);
   }
+
+  .project-detail-grid {
+    grid-template-columns: 1fr;
+  }
+
 
   .fancy-image-box {
     width: 5.6rem;
