--- a/src/App.css
+++ b/src/App.css
@@ -911,6 +911,9 @@ background-image: url(/public/assets/various/dot.png);
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
   position: absolute;
   z-index: 5;
+
+  bottom: 54%;
+  right: 18%;
 }
 
 
@@ -956,7 +959,7 @@ background-image: url(/public/assets/various/dot.png);
 .linkdin-box svg {
   transform: scale(3.2);
   position: absolute;
-  bottom: 12%;
+  top: 12%;
   right: 12%;
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
   transition: all 0.3s cubic-bezier(0.40,0,0.15,1);
@@ -984,9 +987,9 @@ background-image: url(/public/assets/various/dot.png);
 .x-box svg {
   background: var(--white);
   border-radius: 1px;
-  transform: scale(4);
+  transform: scale(3.6);
   position: absolute;
-  bottom: 12%;
+  top: 12%;
   right: 12%;
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(39, 36, 36, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
   padding: 2px;
@@ -1000,7 +1003,7 @@ background-image: url(/public/assets/various/dot.png);
 }
 
 .tech-stack-box {
-  grid-area: 5/1/5/4;
+  grid-area: 5/1/7/4;
 }
 
 .tool-box {
@@ -1128,7 +1131,16 @@ background-image: url(/public/assets/various/dot.png);
 
   .about-grid-wrapper {
     max-width: 750px;
-    grid-template-rows: repeat(10, 150px);
+    grid-template-rows: repeat(8, 160px);
+  }
+
+  .intro-box h3{
+    font-size: 2.8rem;
+    line-height: 3.6rem;
+  }
+  .intro-box p{
+    font-size: 1.6rem;
+    line-height: 2.4rem;
   }
 }
 
@@ -1233,7 +1245,39 @@ background-image: url(/public/assets/various/dot.png);
   }
 
   .about-grid-wrapper {
-    grid-template-rows: repeat(10, 120px);
+    grid-template-rows: repeat(8, 140px);
+  }
+
+  .intro-box  {
+    padding-top: 1.6rem;
+  }
+
+  .intro-box h3 {
+    margin-bottom: 1rem ;
+  }
+
+  .intro-box p {
+    margin-bottom: 1rem ;
+  }
+
+   .linkdin-box svg {
+    transform: scale(2.4);
+  }
+
+  .linkdin-box:hover.linkdin-box svg {
+    transform: scale(3) rotate(-6deg);
+    bottom: 15%;
+    right: 15%;
+  }
+
+  .x-box svg {
+    transform: scale(2.4);
+  }
+
+  .x-box:hover.x-box svg  {
+    transform: scale(3) rotate(-8deg);
+    bottom: 15%;
+    right: 15%;
   }
 
 }
@@ -1242,6 +1286,14 @@ background-image: url(/public/assets/various/dot.png);
   .about-grid-wrapper {
     margin: 7.2rem auto 2.4rem;
   }
+
+  .intro-box p{
+    margin-bottom: 1rem ;
+    font-size: 1.4rem;
+    line-height: 2rem;
+  }
+
+
 
   h3 {
     font-size: 2.8rem;
@@ -1324,7 +1376,7 @@ background-image: url(/public/assets/various/dot.png);
 
   .about-grid-wrapper {
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(14, 100px);
+    grid-template-rows: repeat(9, 110px);
   }
 
   .bento-card {
@@ -1335,6 +1387,16 @@ background-image: url(/public/assets/various/dot.png);
   .intro-box {
     grid-area: 1 / 1 / 3 / 5;
   }
+
+  .intro-box h3 {
+    font-size: 2.4rem;
+  }
+
+  .intro-box p {
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+  }
+
   .profile-img-box {
     grid-area: 3 / 1 / 5 / 3;
   }
@@ -1350,36 +1412,28 @@ background-image: url(/public/assets/various/dot.png);
     grid-area: 4/ 4/ 4 / 5;
   }
 
+  .linkdin-box svg {
+    transform: scale(1.8);
+  }
+
   .x-box {
     grid-area: 4/ 3/ 4 / 4;
   }
 
+  .x-box svg {
+    transform: scale(2);
+  }
+
   .tech-stack-box {
-    display: none;
+    grid-area:7/ 1/ 9 / 3 ;
   }
 
   .tool-box {
-    display: none;
-  }
-
-  .experimental-box {
-    display: none;
-  }
-
-  .more-about-box {
-    display: none;
-  }
-
-  .hobby-box {
-    display: none;
-  }
-
-  .bucket-box {
-    display: none;
+    grid-area:7/ 3/ 9 / 5 ;
   }
 
   .thankyou-boy {
-    display: none;
+    grid-area:9/ 1/ 9 / 5 ;
   }
 
 }
