--- a/src/App.css
+++ b/src/App.css
@@ -1374,7 +1374,7 @@ background-image: url(/public/assets/various/dot.png);
 
   .project-card {
     width: 100%;
-    height: 50svh;
+    height: 58svh;
   }
 
   .project-info p {
@@ -1450,6 +1450,11 @@ background-image: url(/public/assets/various/dot.png);
 
   .thankyou-box {
     grid-area:9/ 1/ 9 / 5 ;
+  }
+
+  .title-wrapper h5 {
+    font-size: 1.6rem;
+    line-height: 2.4rem;
   }
 
 }
