--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,9 @@
   --light-gray:rgb(221, 221, 221) ;
 
   --font-mono: "JetBrains Mono", monospace;
-  --font-primary: "Inter", sans-serif;;
+  --font-primary: "Inter", sans-serif;
+  --green-light: rgba(166, 252, 8, 0.2);
+  --green: rgba(166, 252, 8, 1);
 }
 
 [data-theme= 'light']{
@@ -862,8 +864,23 @@ background-image: url(/public/assets/various/dot.png);
 .bento-card {
   border-radius: 1.4rem;
   background-color: var(--nav-color);
-  padding: 1.8rem;
+  padding: 1.4rem;
+  transition: all 0.3s ease-in-out;
 }
+
+.bento-card h6 {
+  color: var(--text-color-2);
+  font-family: var(--font-mono);
+  font-weight:300;
+  padding: 4px 12px;
+  border: 1px solid var(--border-gray);
+  width: fit-content;
+  font-size: 1.4rem;
+  border-radius: 1rem;
+ background-color: var(--nav-icon-box);
+  transition: all 0.3s ease-in-out;
+}
+
 
 .intro-box {
   grid-area: 1 / 1 / 3 / 4;
@@ -897,6 +914,28 @@ background-image: url(/public/assets/various/dot.png);
 .experience-box {
   grid-area: 3/1/5/4;
 }
+
+.experience-list {
+  height: 10rem;
+  border-radius: 0.4rem;
+  overflow: hidden;
+  margin-top: 1.4rem;
+  
+}
+
+.experience-list-date {
+  padding: 1rem;
+  background-size: 8rem 8rem;
+  background-color: var(--green-light);
+  border-left:4px solid var(--green) ;
+  
+}
+
+.experience-list h5 {
+  font-size: 1.4rem;
+  color: var(--text-color);
+}
+
 
 .map-box {
   grid-area: 3/4/4/6;
@@ -1419,6 +1458,7 @@ background-image: url(/public/assets/various/dot.png);
   .experience-box{
     grid-area: 5 / 1 / 7 / 5;
   }
+
 
   .map-box {
     grid-area: 3 / 3/ 4 / 5;
