--- a/src/App.css
+++ b/src/App.css
@@ -854,18 +854,18 @@ background-image: url(/public/assets/various/dot.png);
 
 .about-grid-wrapper {
   margin: 9.6rem auto 2.4rem;
-  max-width: 1200px;
+  max-width: 900px;
 
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(7, 200px);
-  gap: 1rem;
+
 
 }
 
 .bento-card {
-  border-radius: 1.4rem;
-  background-color: var(--nav-color);
+  /* border-radius: 1.4rem; */
+  /* background-color: var(--nav-color); */
   padding: 1.4rem;
   transition: all 0.3s ease-in-out;
 }
@@ -887,6 +887,8 @@ background-image: url(/public/assets/various/dot.png);
   grid-area: 1 / 1 / 3 / 4;
   padding-top: 2.4rem;
   background: transparent;
+  border-bottom: 0.5px solid var(--border-gray);
+  border-right: 0.5px solid var(--border-gray);
 }
 
 .intro-box h3 {
@@ -899,14 +901,14 @@ background-image: url(/public/assets/various/dot.png);
 .intro-box p {
   font-size: 2.1rem;
   font-weight: 400;
-  line-height:4rem ;
+  line-height:3rem ;
   color: var(--text-color-2);
-  margin-bottom: 1.8rem;
+  margin-bottom: 1.6rem;
 }
 
 .profile-img-box {
   grid-area: 1/4/3/6;
-  background-image: url(/public/assets/various/profile-image/image-1.jpg);
+  /* background-image: url(/public/assets/various/profile-image/image-1.jpg); */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -925,7 +927,7 @@ background-image: url(/public/assets/various/dot.png);
 }
 
 .experience-list-item {
-  padding: 16px 16px;
+  /* padding: 8px 16px; */
   border-radius: 1.4rem;
   width: 100%;
 
