--- a/src/App.css
+++ b/src/App.css
@@ -866,7 +866,7 @@ background-image: url(/public/assets/various/dot.png);
 .bento-card {
   /* border-radius: 1.4rem; */
   /* background-color: var(--nav-color); */
-  padding: 1.4rem;
+  /* padding: 1.4rem; */
   transition: all 0.3s ease-in-out;
 }
 
@@ -874,7 +874,7 @@ background-image: url(/public/assets/various/dot.png);
   color: var(--text-color-2);
   font-family: var(--font-mono);
   font-weight:300;
-  padding-bottom: 1rem;
+  padding: 1rem;
   margin-bottom: 1rem;
   width: auto;
   font-size: 1.4rem;
@@ -888,7 +888,7 @@ background-image: url(/public/assets/various/dot.png);
   padding-top: 2.4rem;
   background: transparent;
   border-bottom: 0.5px solid var(--border-gray);
-  border-right: 0.5px solid var(--border-gray);
+  /* border-right: 0.5px solid var(--border-gray); */
 }
 
 .intro-box h3 {
@@ -908,7 +908,7 @@ background-image: url(/public/assets/various/dot.png);
 
 .profile-img-box {
   grid-area: 1/4/3/6;
-  /* background-image: url(/public/assets/various/profile-image/image-1.jpg); */
+  background-image: url(/public/assets/various/profile-image/image-1.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -916,6 +916,9 @@ background-image: url(/public/assets/various/dot.png);
 
 .experience-box {
   grid-area: 3/1/5/4;
+  border-left: 0.5px solid var(--border-gray) ;
+  border-bottom: 0.5px solid var(--border-gray) ;
+  border-right: 0.5px solid var(--border-gray) ;
 }
 
 .experience-list {
@@ -927,7 +930,7 @@ background-image: url(/public/assets/various/dot.png);
 }
 
 .experience-list-item {
-  /* padding: 8px 16px; */
+  padding: 8px 16px;
   border-radius: 1.4rem;
   width: 100%;
 
@@ -1010,11 +1013,18 @@ background-image: url(/public/assets/various/dot.png);
   position: relative;
   overflow: hidden;
   cursor: pointer;
+
+  border-right: 0.5px solid var(--border-gray) ;
+  border-bottom: 0.5px solid var(--border-gray) ;
+
 }
 
 
 .tech-stack-box {
   grid-area: 5/1/7/4;
+  border-bottom: 0.5px solid var(--border-gray) ;
+  border-left: 0.5px solid var(--border-gray) ;
+  border-right: 0.5px solid var(--border-gray) ;
 }
 
 .tech-stack-list-item {
@@ -1030,9 +1040,9 @@ background-image: url(/public/assets/various/dot.png);
 }
 
 .tech-stack-list-item h6 {
-  margin: 16px 8px;
+  margin: 14px 8px;
   color: var(--text-color-05);
-  font-size: 1.8rem;
+  font-size: 1.4rem;
   font-family: var(--font-mono);
   font-weight: 200;
 }
@@ -1046,15 +1056,14 @@ background-image: url(/public/assets/various/dot.png);
 }
 
 .tools-box-items{
-  padding: 16px;
-  /* background-color: var(--nav-icon-box); */
   border-radius: 1.4rem;
   gap: 8px;
 }
 
 .tools-box-items h6 {
   color: var(--text-color-05);
-  font-size: 1.4rem;
+  font-size: 1.6rem;
+  line-height: 2.1rem;
   font-family: var(--font-mono);
   font-weight: 200;
 
@@ -1062,6 +1071,19 @@ background-image: url(/public/assets/various/dot.png);
 
 .tools-box {
   grid-area: 5/4/7/6;
+  border-right: 0.5px solid var(--border-gray) ;
+  border-bottom: 0.5px solid var(--border-gray) ;
+}
+
+.tool-box-grid {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 24px;
+}
+
+.tool-box-grid h6 {
+  text-align: center;
+  line-height: normal;
 }
 
 .experimental-box {
@@ -1071,7 +1093,7 @@ background-image: url(/public/assets/various/dot.png);
 .thankyou-box{
   grid-area: 7/1/9/6 ;
 
-  background: linear-gradient(180deg, var(--nav-color) 0%, rgba(0, 0, 0, 0.00) 100%);
+  /* background: linear-gradient(180deg, var(--nav-color) 0%, rgba(0, 0, 0, 0.00) 100%); */
 
 }
 
@@ -1242,7 +1264,7 @@ background-image: url(/public/assets/various/dot.png);
 .tech-stack-list-item h6 {
   margin: 8px 8px;
   color: var(--text-color-05);
-  font-size: 1.6rem;
+  font-size: 1.4rem;
 }
 
 }
